objects/ASI_CRM_Contract_Cost_Setting__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_Activity_Code__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Activity Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Contract Cost Setting</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_A_C_Code__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN A/C Code</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_A_C_Code__c</referenceTo>
        <relationshipLabel>Contract Cost Settings</relationshipLabel>
        <relationshipName>Contract_Cost_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_BRSF_Activity_Code_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BRSF Activity Code Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OFF TOT</fullName>
                </value>
                <value>
                    <fullName>OFF MOT</fullName>
                </value>
                <value>
                    <fullName>New Retail</fullName>
                </value>
                <value>
                    <fullName>WS Channel</fullName>
                </value>
                <value>
                    <fullName>BulkPurchase</fullName>
                </value>
                <value>
                    <fullName>All Customer</fullName>
                </value>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Chinese_Description__c</fullName>
        <label>Chinese Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Fixed_Cost_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fixed Cost (Contract)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Other_Cost_Payment_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Cost (Payment Request)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Promotion_Type__c</fullName>
        <label>Promotion Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Contract ON</fullName>
                </value>
                <value>
                    <fullName>New Contract OFF</fullName>
                </value>
                <value>
                    <fullName>RTD ON</fullName>
                </value>
                <value>
                    <fullName>RTD OFF</fullName>
                </value>
                <value>
                    <fullName>New Contract E-Commerce</fullName>
                </value>
                <value>
                    <fullName>NCO KTV</fullName>
                </value>
                <value>
                    <fullName>NCO RTV</fullName>
                </value>
                <value>
                    <fullName>NCO F-KTV</fullName>
                </value>
                <value>
                    <fullName>NCO Bar</fullName>
                </value>
                <value>
                    <fullName>NCO Chinese Restaurant</fullName>
                </value>
                <value>
                    <fullName>NCO Hotel</fullName>
                </value>
                <value>
                    <fullName>NCO Inter Hotel/Bar/Restaurant</fullName>
                </value>
                <value>
                    <fullName>NCO RTD ON</fullName>
                </value>
                <value>
                    <fullName>NCO MOT</fullName>
                </value>
                <value>
                    <fullName>NCO TOT</fullName>
                </value>
                <value>
                    <fullName>NCO Bulk Purchase</fullName>
                </value>
                <value>
                    <fullName>NCO E-Commerce</fullName>
                </value>
                <value>
                    <fullName>NCO RTD OFF</fullName>
                </value>
                <value>
                    <fullName>Promoter Costs</fullName>
                </value>
                <value>
                    <fullName>Trade Marketing</fullName>
                </value>
                <value>
                    <fullName>Outlet Promotion</fullName>
                </value>
                <value>
                    <fullName>Wholesaler Promotion</fullName>
                </value>
                <value>
                    <fullName>Consumer Promotion</fullName>
                </value>
                <value>
                    <fullName>Intra region entertainment</fullName>
                </value>
                <value>
                    <fullName>Trade Fair</fullName>
                </value>
                <value>
                    <fullName>Market Visit</fullName>
                </value>
                <value>
                    <fullName>VAT Deemed Sales</fullName>
                </value>
                <value>
                    <fullName>National Group Contract</fullName>
                </value>
                <value>
                    <fullName>POP - Warehouse &amp; Delivery (only for HQ/MM)</fullName>
                </value>
                <value>
                    <fullName>Free Goods (only for HQ/MM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Service_Requirement_Central__c</fullName>
        <label>Service Requirement (Central)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Service_Requirement_East__c</fullName>
        <label>Service Requirement (East)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Service_Requirement_North__c</fullName>
        <label>Service Requirement (North)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Service_Requirement_Northwest__c</fullName>
        <label>Service Requirement (Northwest)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Service_Requirement_Southwest__c</fullName>
        <label>Service Requirement (Southwest)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Svc_Req__c</fullName>
        <description>This is for displaying the Service Requirement in the contract template</description>
        <label>Service Requirement (South)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Variable_Cost_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Variable Cost (Contract)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Festival_Season__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Festival Season</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PSF_Activity_Code_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Heavy Contract On</description>
        <label>PSF Activity Code Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VEC_Activity_Code_Defaul__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Heavy Contract On</description>
        <label>Variable Event Cost Activity Code Defaul</label>
        <type>Checkbox</type>
    </fields>
    <label>Contract Cost Setting</label>
    <listViews>
        <fullName>ASI_CRM_CN_Contract_Cost_Setting</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Promotion_Type__c</columns>
        <columns>ASI_CRM_CN_Channel__c</columns>
        <columns>ASI_CRM_CN_Activity_Code__c</columns>
        <columns>ASI_CRM_CN_Chinese_Description__c</columns>
        <columns>ASI_CRM_CN_Sequence__c</columns>
        <columns>ASI_CRM_CN_BRSF_Activity_Code_Default__c</columns>
        <columns>ASI_CRM_PSF_Activity_Code_Default__c</columns>
        <columns>ASI_CRM_CN_Fixed_Cost_Contract__c</columns>
        <columns>ASI_CRM_CN_Variable_Cost_Contract__c</columns>
        <columns>ASI_CRM_CN_Other_Cost_Payment_Request__c</columns>
        <columns>ASI_CRM_Festival_Season__c</columns>
        <columns>ASI_CRM_VEC_Activity_Code_Defaul__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Contract_Cost_Setting__c.ASI_CRM_CN_Contract_Cost_Setting</value>
        </filters>
        <filters>
            <field>ASI_CRM_CN_Promotion_Type__c</field>
            <operation>equals</operation>
            <value>TOT/MOT Contract</value>
        </filters>
        <label>CN Contract Cost Setting-TOTMOT</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Contract_Cost_Setting</fullName>
        <columns>ASI_CRM_CN_Promotion_Type__c</columns>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Activity_Code__c</columns>
        <columns>ASI_CRM_CN_Chinese_Description__c</columns>
        <columns>ASI_CRM_CN_Channel__c</columns>
        <columns>ASI_CRM_CN_BRSF_Activity_Code_Default__c</columns>
        <columns>ASI_CRM_PSF_Activity_Code_Default__c</columns>
        <columns>ASI_CRM_CN_Fixed_Cost_Contract__c</columns>
        <columns>ASI_CRM_CN_Variable_Cost_Contract__c</columns>
        <columns>ASI_CRM_CN_Other_Cost_Payment_Request__c</columns>
        <columns>ASI_CRM_CN_Sequence__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Contract_Cost_Setting__c.ASI_CRM_CN_Contract_Cost_Setting</value>
        </filters>
        <label>All Contract Cost Setting</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Contract_Cost_Setting_search</fullName>
        <columns>ASI_CRM_CN_Promotion_Type__c</columns>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Activity_Code__c</columns>
        <columns>ASI_CRM_CN_Chinese_Description__c</columns>
        <columns>ASI_CRM_CN_BRSF_Activity_Code_Default__c</columns>
        <columns>ASI_CRM_PSF_Activity_Code_Default__c</columns>
        <columns>ASI_CRM_CN_Fixed_Cost_Contract__c</columns>
        <columns>ASI_CRM_CN_Variable_Cost_Contract__c</columns>
        <columns>ASI_CRM_CN_Other_Cost_Payment_Request__c</columns>
        <columns>ASI_CRM_CN_Sequence__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Contract_Cost_Setting__c.ASI_CRM_CN_Contract_Cost_Setting</value>
        </filters>
        <label>All Contract Cost Setting - search</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_Contract_Cost_Setting_Promotion</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Promotion_Type__c</columns>
        <columns>ASI_CRM_CN_Channel__c</columns>
        <columns>ASI_CRM_CN_Activity_Code__c</columns>
        <columns>ASI_CRM_CN_Chinese_Description__c</columns>
        <columns>ASI_CRM_CN_Sequence__c</columns>
        <columns>ASI_CRM_CN_BRSF_Activity_Code_Default__c</columns>
        <columns>ASI_CRM_PSF_Activity_Code_Default__c</columns>
        <columns>ASI_CRM_CN_Fixed_Cost_Contract__c</columns>
        <columns>ASI_CRM_CN_Variable_Cost_Contract__c</columns>
        <columns>ASI_CRM_CN_Other_Cost_Payment_Request__c</columns>
        <columns>ASI_CRM_Festival_Season__c</columns>
        <columns>ASI_CRM_VEC_Activity_Code_Defaul__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Contract_Cost_Setting__c.ASI_CRM_CN_Contract_Cost_Setting</value>
        </filters>
        <filters>
            <field>ASI_CRM_CN_Promotion_Type__c</field>
            <operation>equals</operation>
            <value>Outlet Promotion,Wholesaler Promotion,Consumer Promotion</value>
        </filters>
        <label>CN Contract Cost Setting-Promotion</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Cost Settings</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Contract_Cost_Setting</fullName>
        <active>true</active>
        <label>CN Contract Cost Setting</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>